feat: 增加紧凑对象头参数